<resources>
    <string name="app_name">NDK Exercise</string>
    <string name="title_activity_home">Detecting Features</string>
    <string name="title_activity_feature">Detecting Basic Features</string>
    <string name="action_load_image">Load Image</string>
    <string name="action_switch_camera">Switch Camera</string>
    <string name="action_gaussian_blur">Gaussian Blur</string>
    <string name="action_default">Default View</string>
    <string name="action_mean_blur">Mean Blur</string>
    <string name="action_median_blur">Median Blur</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="DoG">Difference of Gaussian</string>
    <string name="CannyEdges">Canny Edges</string>
    <string name="SobelFilter">Sobel filter</string>
    <string name="HarrisCorners">Harris Corners</string>
    <string name="HoughLines">Hough Lines</string>
    <string name="HoughCircles">Hough Circles</string>
    <string name="Contours">Contours</string>
    <string name="resetimage">Reset Image</string>
    <string name="title_activity_lens">DocumentScanningActivity</string>
    <string name="action_rigidscan">Rigid Scan</string>
    <string name="action_flexscan">Flex Scan</string>
    <string name="action_manScan">Manual Scan</string>

    <!--wifi peer to peer-->
    <string name="activity_name">WiFi Direct</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
</resources>
