<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_load_image"
          android:title="@string/action_load_image"
          android:orderInCategory="1"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/DoG"
          android:title="@string/DoG"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/CannyEdges"
          android:title="@string/CannyEdges"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/SobelFilter"
          android:title="@string/SobelFilter"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/HarrisCorners"
          android:title="@string/HarrisCorners"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/HoughLines"
          android:title="@string/HoughLines"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/HoughCircles"
          android:title="@string/HoughCircles"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/Contours"
          android:title="@string/Contours"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item
        android:id="@+id/action_rigidscan"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/action_rigidscan"
        android:visible="true">
    </item><item
        android:id="@+id/action_flexscan"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/action_flexscan"
        android:visible="true">
    </item><item
        android:id="@+id/action_manScan"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/action_manScan"
        android:visible="true">
    </item>
    <item android:id="@+id/reset"
          android:title="@string/resetimage"
          android:orderInCategory="100"
          app:showAsAction="never"  android:visible="true"/>





</menu>